// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlInput component tests should hide the UrlInput component when it is hidden 1`] = `
<input
  className="placeholder-gray-300 dark:placeholder-gray-500 text-darkPurple dark:text-white text-md relative bg-white dark:bg-gray-600 rounded border-0 shadow outline-none focus:outline-none w-full transition-opacity duration-300 h-0 p-0 opacity-0"
  id="url-input"
  name="url-input"
  onChange={[MockFunction]}
  onKeyPress={[Function]}
  placeholder="https://google.com/?q=A+Long+Query+You+Want+To+Share+With..."
  type="text"
  value="https://..."
/>
`;

exports[`UrlInput component tests should render the UrlInput component when it not hidden 1`] = `
<input
  className="placeholder-gray-300 dark:placeholder-gray-500 text-darkPurple dark:text-white text-md relative bg-white dark:bg-gray-600 rounded border-0 shadow outline-none focus:outline-none w-full transition-opacity duration-300 p-3"
  id="url-input"
  name="url-input"
  onChange={[MockFunction]}
  onKeyPress={[Function]}
  placeholder="https://google.com/?q=A+Long+Query+You+Want+To+Share+With..."
  type="text"
  value="https://..."
/>
`;
